--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -45,6 +45,7 @@
         <th>Jmeno</th>
         <th>Datum vydani</th>
         <th>Zanr</th>
+        <th>Autori</th>
     </tr>
     </thead>
     <tbody>
@@ -52,6 +53,7 @@
             <td th:text="${book.name}">Onions</td>
             <td th:text="${book.release}">2.41</td>
             <td th:text="${book.genre}">yes</td>
+            <td th:text="${book.authors}">Henrich</td>
         </tr>
     </tbody>
     <tfoot>
@@ -59,6 +61,7 @@
         <th>Jmeno</th>
         <th>Datum vydani</th>
         <th>Zanr</th>
+        <th>Autori</th>
     </tr>
     </tfoot>
 </table>
