--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -13,30 +13,30 @@
 <form th:action="@{/}">
     <div class="row">
         <div class="col-sm-4">
-            <input type="text" class="form-control" placeholder="Jmeno knihy" th:name="book_name"/>
+            <input type="text" class="form-control" placeholder="Jmeno knihy" th:name="book_name" th:value="${book_name}"/>
         </div>
         <div class="col-sm-4">
-            <input type="text" class="form-control" placeholder="Jmeno knihovny" th:name="library_name"/>
+            <input type="text" class="form-control" placeholder="Jmeno knihovny" th:name="library_name" th:value="${library_name}"/>
         </div>
         <div class="col-sm-4">
-            <input type="text" class="form-control" placeholder="Žánr" th:name="book_genre"/>
+            <input type="text" class="form-control" placeholder="Žánr" th:name="book_genre" th:value="${book_genre}"/>
         </div>
     </div>
     <div class="row">
         <div class="col-sm-4">
-            <input type="text" class="form-control" placeholder="Autor" th:name="author_name"/>
+            <input type="text" class="form-control" placeholder="Autor" th:name="author_name" th:value="${author_name}"/>
         </div>
         <div class="col-sm-1">
-            <input type="checkbox" class="form-check-input" id="reserved_checkbox" th:checked="reserved"/>
+            <input type="checkbox" class="form-check-input" id="reserved_checkbox" th:name="available" th:checked="${available}"/>
             <label class="form-check-label" for="reserved_checkbox">
-                rezervovano
+                dostupne
             </label>
         </div>
         <div class="col-sm-3">
-            <input type="date" class="form-control" th:value="release_date"/>
+            <input type="number" min="1" max="2021" class="form-control" th:name="release_date" th:value="${release_date}"/>
         </div>
         <div class="col-sm-1">
-            <input type="checkbox" class="form-check-input" id="before_checkbox" th:checked="before"/>
+            <input type="checkbox" class="form-check-input" id="before_checkbox" th:name="before" th:checked="${before}" />
             <label class="form-check-label" for="before_checkbox">
                 před?
             </label>
@@ -44,18 +44,17 @@
     </div>
     <div class="row">
         <div class="col-sm-2">
-            <input type="text" class="form-control" placeholder="ISBN" th:name="isbn"/>
+            <input type="text" class="form-control" placeholder="ISBN" th:name="isbn" th:value="${isbn}"/>
         </div>
         <div class="col-sm-3">
-            <input type="text" class="form-control" placeholder="vydavatel" th:name="publisher"/>
+            <input type="text" class="form-control" placeholder="vydavatel" th:name="publisher" th:value="${publisher}"/>
         </div>
         <div class="col-sm-2">
-            <input type="number"th:value="genre" id="rating_input" min="1" max="10"/>
+            <input type="number" id="rating_input" min="1" max="10" th:name="genre" th:value="${genre}"/>
             <label class="form-check-label" for="rating_input">
                 Minimalni rating
             </label>
         </div>
-
     </div>
     <div class="col">
         <input class="form-control" type="submit"/>
