--- a/src/main/resources/templates/library.html
+++ b/src/main/resources/templates/library.html
@@ -62,8 +62,8 @@
         Spravovat knizni tituly v knihovne
     </button>
 </a>
-<a th:href="@{/library(library_id=${library.id})}">
-    <button class="btn btn-primary">
+<a th:href="@{/reservations(library_id=${library.id})}">
+    <button class="btn btn-warning">
         Spravovat rezervane
     </button>
 </a>
