--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,97 +6,167 @@
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <script src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/1.11.3/js/dataTables.bootstrap5.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.1/css/bootstrap.min.css" id="bootstrap-css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+
     <link rel="stylesheet" href="https://cdn.datatables.net/1.11.3/css/dataTables.bootstrap5.min.css" id="bootstrap-data">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
 </head>
 <body>
-<form th:action="@{/}">
-    <div class="row">
-        <div class="col-sm-4">
-            <input type="text" class="form-control" placeholder="Jmeno knihy" th:name="book_name" th:value="${book_name}"/>
-        </div>
-        <div class="col-sm-4">
-            <input type="text" class="form-control" placeholder="Jmeno knihovny" th:name="library_name" th:value="${library_name}"/>
-        </div>
-        <div class="col-sm-4">
-            <input type="text" class="form-control" placeholder="Žánr" th:name="book_genre" th:value="${book_genre}"/>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-sm-4">
-            <input type="text" class="form-control" placeholder="Autor" th:name="author_name" th:value="${author_name}"/>
-        </div>
-        <div class="col-sm-1">
-            <input type="checkbox" class="form-check-input" id="reserved_checkbox" th:name="available" th:checked="${available}"/>
-            <label class="form-check-label" for="reserved_checkbox">
-                dostupne
-            </label>
-        </div>
-        <div class="col-sm-3">
-            <input type="number" min="1" max="2021" class="form-control" th:name="release_date" th:value="${release_date}"/>
-        </div>
-        <div class="col-sm-1">
-            <input type="checkbox" class="form-check-input" id="before_checkbox" th:name="before" th:checked="${before}" />
-            <label class="form-check-label" for="before_checkbox">
-                před?
-            </label>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-sm-2">
-            <input type="text" class="form-control" placeholder="ISBN" th:name="isbn" th:value="${isbn}"/>
-        </div>
-        <div class="col-sm-3">
-            <input type="text" class="form-control" placeholder="vydavatel" th:name="publisher" th:value="${publisher}"/>
-        </div>
-        <div class="col-sm-2">
-            <input type="number" id="rating_input" min="1" max="10" th:name="genre" th:value="${genre}"/>
-            <label class="form-check-label" for="rating_input">
-                Minimalni rating
-            </label>
-        </div>
-    </div>
-    <div class="col">
-        <input class="form-control" type="submit"/>
-    </div>
+    <div class="container-fluid">
+        <div class="row flex-nowrap">
+            <div class="col-auto col-md-3 col-xl-2 px-sm-2 px-0 bg-dark">
+                <div class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 text-white min-vh-100">
+                    <a href="/" class="d-flex align-items-center pb-3 mb-md-0 me-md-auto text-white text-decoration-none">
+                        <span class="fs-5 d-none d-sm-inline">Menu</span>
+                    </a>
+                    <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start" id="menu">
+                        <li class="nav-item">
+                            <a href="#" class="nav-link align-middle px-0">
+                                <i class="fs-4 bi-house"></i> <span class="ms-1 d-none d-sm-inline">Sprava knih</span>
+                            </a>
+                        </li>
+                        <li sec:authorize="hasAnyRole('ADMIN', 'LIBRARIAN')">
+                            <a href="/libraries" class="nav-link px-0 align-middle">
+                                <i class="fs-4 bi-building"></i> <span class="ms-1 d-none d-sm-inline">Sprava knihoven</span></a>
+                        </li>
+                        <li sec:authorize="hasRole('ADMIN')">
+                            <a href="/book" class="nav-link px-0 align-middle">
+                                <i class="fs-4 bi-book"></i> <span class="ms-1 d-none d-sm-inline">Pridani knih</span></a>
+                        </li>
+                        <li sec:authorize="hasRole('ADMIN')">
+                            <a href="#" class="nav-link px-0 align-middle">
+                                <i class="fs-4 bi-people"></i> <span class="ms-1 d-none d-sm-inline">Sprava uzivatelu</span></a>
+                        </li>
+                        <!--<li>
+                            <a href="#submenu2" data-bs-toggle="collapse" class="nav-link px-0 align-middle ">
+                                <i class="fs-4 bi-bootstrap"></i> <span class="ms-1 d-none d-sm-inline">Bootstrap</span></a>
+                            <ul class="collapse nav flex-column ms-1" id="submenu2" data-bs-parent="#menu">
+                                <li class="w-100">
+                                    <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Item</span> 1</a>
+                                </li>
+                                <li>
+                                    <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Item</span> 2</a>
+                                </li>
+                            </ul>
+                        </li> -->
+                    </ul>
+                    <hr>
+                    <div class="dropdown pb-4" sec:authorize="hasAnyRole('READER', 'ADMIN', 'LIBRARIAN')">
+                        <a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
+                            <i class="fs-4 bi-person-circle"></i>
+                            <span class="d-none d-sm-inline mx-1" sec:authentication="name"></span>
+                        </a>
+                        <ul class="dropdown-menu dropdown-menu-dark text-small shadow" aria-labelledby="dropdownUser1">
 
-</form>
+                            <li sec:authorize="hasRole('ADMIN')"><span class="dropdown-item">Administrator</span> </li>
+                            <li sec:authorize="hasRole('LIBRARIAN')"><span class="dropdown-item">Knihovnik</span> </li>
+                            <li sec:authorize="hasRole('READER')"><span class="dropdown-item">Ctenar</span> </li>
 
-<table id="bookListing" class="table table-hover">
-    <thead>
-    <tr>
-        <th>Jmeno</th>
-        <th>Datum vydani</th>
-        <th>Zanr</th>
-        <th>Autori</th>
-        <th>ISBN</th>
-        <th>Vydavatel</th>
-        <th>Hodnoceni</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:each="book : ${books}">
-        <td th:text="${book.name}">Onions</td>
-        <td th:text="${book.release}">2.41</td>
-        <td th:text="${book.genre}">yes</td>
-        <td th:text="${book.authors}">Henrich</td>
-        <td th:text="${book.isbn}"> AC12</td>
-        <td th:text="${book.publisher}">Franz Josef</td>
-        <td th:text="${book.rate}">Franz Josef</td>
-    </tr>
-    </tbody>
-    <tfoot>
-    <tr>
-        <th>Jmeno</th>
-        <th>Datum vydani</th>
-        <th>Zanr</th>
-        <th>Autori</th>
-        <th>ISBN</th>
-        <th>Vydavatel</th>
-        <th>Hodnoceni</th>
-    </tr>
-    </tfoot>
-</table>
+                            <li sec:authorize="hasRole('READER')"><a class="dropdown-item" href="#">My reservations</a></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li><a class="dropdown-item" href="/logout">Sign out</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="col py-3">
+                <form th:action="@{/}">
+                    <div class="row">
+                        <div class="col-sm-4">
+                            <input type="text" class="form-control" placeholder="Jmeno knihy" th:name="book_name" th:value="${book_name}"/>
+                        </div>
+                        <div class="col-sm-4">
+                            <input type="text" class="form-control" placeholder="Jmeno knihovny" th:name="library_name" th:value="${library_name}"/>
+                        </div>
+                        <div class="col-sm-4">
+                            <input type="text" class="form-control" placeholder="Žánr" th:name="book_genre" th:value="${book_genre}"/>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-4">
+                            <input type="text" class="form-control" placeholder="Autor" th:name="author_name" th:value="${author_name}"/>
+                        </div>
+                        <div class="col-sm-1">
+                            <input type="checkbox" class="form-check-input" id="reserved_checkbox" th:name="available" th:checked="${available}"/>
+                            <label class="form-check-label" for="reserved_checkbox">
+                                dostupne
+                            </label>
+                        </div>
+                        <div class="col-sm-3">
+                            <input type="number" min="1" ßmax="2021" class="form-control" th:name="release_date" th:value="${release_date}"/>
+                        </div>
+                        <div class="col-sm-1">
+                            <input type="checkbox" class="form-check-input" id="before_checkbox" th:name="before" th:checked="${before}" />
+                            <label class="form-check-label" for="before_checkbox">
+                                před?
+                            </label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-2">
+                            <input type="text" class="form-control" placeholder="ISBN" th:name="isbn" th:value="${isbn}"/>
+                        </div>
+                        <div class="col-sm-3">
+                            <input type="text" class="form-control" placeholder="vydavatel" th:name="publisher" th:value="${publisher}"/>
+                        </div>
+                        <div class="col-sm-2">
+                            <input type="number" id="rating_input" min="1" max="10" th:name="genre" th:value="${genre}"/>
+                            <label class="form-check-label" for="rating_input">
+                                Minimalni rating
+                            </label>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <input class="form-control" type="submit"/>
+                    </div>
+                </form>
+                <table id="bookListing" class="table table-hover">
+                    <thead>
+                    <tr>
+                        <th>Jmeno</th>
+                        <th>Datum vydani</th>
+                        <th>Zanr</th>
+                        <th>Autori</th>
+                        <th>ISBN</th>
+                        <th>Vydavatel</th>
+                        <th>Hodnoceni</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr th:each="book : ${books}">
+                        <td th:text="${book.name}">Onions</td>
+                        <td th:text="${book.release}">2.41</td>
+                        <td th:text="${book.genre}">yes</td>
+                        <td th:text="${book.authors}">Henrich</td>
+                        <td th:text="${book.isbn}"> AC12</td>
+                        <td th:text="${book.publisher}">Franz Josef</td>
+                        <td th:text="${book.rate}">Franz Josef</td>
+                    </tr>
+                    </tbody>
+                    <tfoot>
+                    <tr>
+                        <th>Jmeno</th>
+                        <th>Datum vydani</th>
+                        <th>Zanr</th>
+                        <th>Autori</th>
+                        <th>ISBN</th>
+                        <th>Vydavatel</th>
+                        <th>Hodnoceni</th>
+                    </tr>
+                    </tfoot>
+                </table>
+            </div>
+
+        </div>
+    </div>
+ß
+
+
 <div sec:authorize="hasRole('ADMIN')">
     This content is only shown to administrators.
 </div>
@@ -104,6 +174,7 @@
     This content is only shown to users.
 </div>
 Logged user: <span sec:authentication="name">Bob</span>
+
 </body>
 <script>
     $(document).ready(function() {
